# grpcpp-bidi-streaming

./: CMakeLists.txt  LICENSE  README.md
client/: Client.h  DownloadRequestHandler.cpp  UploadRequestHandler.cpp  UploadRequestHandler.h  main.cpp
common/: FileError.h  FileManager.h  FileWriter.h  HandlerInterface.h
server/: DownloadRequestHandler.h  HandlerManager.hpp  Server.h  UploadRequestHandler.h
src/client/: Client.cpp  DownloadRequestHandler.h
src/common/: FileExchange.proto  FileLock.h  FileManager.cpp  FileReader.cpp  FileReader.h  FileWriter.cpp  RequestStatus.cpp  RequestStatus.h
src/server/: DownloadRequestHandler.cpp  Server.cpp  UploadRequestHandler.cpp  main.cpp
